--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
 <body bgcolor="lightblue">
     <strong>Bienvenido a CODIFY</strong>
+    <a href="pages/components/contact.html">Contact</a>
     <p>Lorem ipsum dolor <strong>sit amet consectetur</strong> adipisicing elit. Dolorem sed repellat doloremque
         praesentium, quisquam recusandae sapiente quos perferendis quis suscipit repellendus harum consequatur nisi
         ducimus at laudantium magnam libero labore.</p>
+    
+    <a href="pages/components/player.html">Play Music</a>
+    <br>
+    <br>
     <a href="https://www.google.com" target="__blank">Iniciar</a>
     <a href="pages/signup.html">Registrar</a>
     <!--
